# src/models/Course.js
@@ -1,12 +1,20 @@
 const mongoose = require("mongoose");
 
-const schema = mongoose.Schema({
-    title : {
-        type : String,
-        required : true
-    }
-})
+const schema = mongoose.Schema(
+  {
+    title: {
+      type: String,
+      required: true,
+    },
+    teacherId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "User",
+      required: true,
+    },
+  },
+  { timestamps: true }
+);
 
-const model = mongoose.model("Course" , schema);
+const model = mongoose.model("Course", schema);
 
-module.exports = model
+module.exports = model;
